data/all_generated_tests/raw_wast_tests/br_if_TypeMismatchinControlFlowInstructions_1852.wast
;; 3. **Test Incorrect Operand Stack Types Prior to Condition**:    - **Description**: Include other value types on the operand stack before the `br_if` condition operand.    - **Constraint Checked**: Ensures that operand stack unwinding correctly recognizes and handles type sequence leading up to `i32`.    - **Relation to Type Mismatch**: Ensures stack unwinding maintains type integrity.

(assert_invalid
  (module
    (func (block
      (f32.const 0.0)
      (i64.const 1)
      (br_if 0 (i32.const 1))
    ))
  )
  "type mismatch"
)